💀 - Fix header z-indexing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,6 +62,8 @@ a {
 
 .header {
   font-size: 0.75rem;
+  position: relative;
+  z-index: 1;
   display: grid;
   grid-template-columns: 1fr min-content;
   justify-content: space-between;
@@ -71,29 +73,29 @@ a {
     font-size: 1rem;
     grid-template-columns: 1fr 1fr 4fr;
   }
-}
-.header__season {
-  grid-row: 2;
-  @media (min-width: 960px) {
-    grid-column: 2;
-    grid-row: 1;
+  &__season {
+    grid-row: 2;
+    @media (min-width: 960px) {
+      grid-column: 2;
+      grid-row: 1;
+    }
   }
-}
-.header__credit {
-  grid-row-end: span 2;
-  text-align: right;
-  @media (min-width: 960px) {
-    grid-row-end: span 1;
-  }
-  a {
-    white-space: nowrap;
-    text-decoration: none;
-    opacity: 0.5;
-    color: inherit;
-    &:hover,
-    &:active,
-    &:focus {
-      opacity: 0.8;
+  &__credit {
+    grid-row-end: span 2;
+    text-align: right;
+    @media (min-width: 960px) {
+      grid-row-end: span 1;
+    }
+    a {
+      white-space: nowrap;
+      text-decoration: none;
+      opacity: 0.5;
+      color: inherit;
+      &:hover,
+      &:active,
+      &:focus {
+        opacity: 0.8;
+      }
     }
   }
 }
